--- a/.muttrc
+++ b/.muttrc
@@ -1,10 +1,10 @@
 # A basic .muttrc for use with Gmail
 
 # Change the following six lines to match your Gmail account details
-set imap_user = "shreesh@kayak.com"
+set imap_user = "shreeshga@gmail.com"
 set copy=yes  
-set smtp_url = "smtps://shreesh@kayak.com@smtp.gmail.com:465/"
-set from = "shreesh@kayak.com"
+set smtp_url = "smtps://shreeshga@gmail.com@smtp.gmail.com:465/"
+set from = "shreeshga@gmail.com"
 set realname = "shreesh ayachit"
 
 # Change the following line to a different editor you prefer.
